# service-sls-de-para-account-ecd

./: .gitignore  package-lock.json  pyproject.toml  serverless.yml  test.py  test2.py
src/: functions.py  get_de_para.py  handler.py  process_generate_lancs_with_depara.py  process_get_saldo_only_i155.py  process_get_saldo_when_already_read_i155.py  process_lancs_when_already_process_saldo.py  process_saldo.py  read_lines_and_processed.py  requests_adapter.py  save_data.py  upload_to_cloudfare_r2.py  zip_files.py
src/process_without_de_para/: __main__.py  generate_account_plan.py  generate_lancs.py
